--- a/src/sass/partials/materialize.scss
+++ b/src/sass/partials/materialize.scss
@@ -191,10 +191,10 @@ input[type=checkbox]:not(:disabled) ~ .lever:active:after {
 .md-btn-white {
   background: #fff;
   &:hover, &:focus {
-    background: rgba(153,153,153,0.2);
+    background: #fff
   },
   &:active {
-    background: rgba(153, 153, 153, 0.4);
+    background: #fff;
   }
 }
 
